EEC_InitBackup/src/objects/Non_Compliant__c.object
<CustomObject>
    <description>This object is used for non-compliant items outside a visit</description>
    <fields>
        <fullName>Correction_Plan_Status__c</fullName>
        <label>Correction Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Collect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Provider To Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider Submitted, EEC to Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEC Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Non-compliance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correction_Plan__c</fullName>
        <inlineHelpText>Describe here the corrective actives that have been taken or will be taken to resolve this non-compliance</inlineHelpText>
        <label>Correction Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_EEC_Feedback__c</fullName>
        <inlineHelpText>Fill this field if the corrective action submitted by the provider is not appropriate. By updating this field, Providers using electronic communication will be informed by email and will be able to update the correction plan on the portal</inlineHelpText>
        <label>Corrective Action EEC Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corrective_Actions_Submitter__c</fullName>
        <description>Update &quot;Corrective Actions Submitter&quot; with First / Last name of the user who did the update</description>
        <inlineHelpText>Update &quot;Corrective Actions Submitter&quot; with First / Last name of the user who did the update</inlineHelpText>
        <label>Corrective Actions Submitter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_History_Record_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create History Record flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Correction_Plan_Accepted__c</fullName>
        <label>Date Correction Plan Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Corrective_Actions_Received__c</fullName>
        <label>Date Corrective Actions Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implemented__c</fullName>
        <inlineHelpText>Mention here the date the corrective actions were implemented or the expected date of completion</inlineHelpText>
        <label>Date Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Requested__c</fullName>
        <formula>AND( ISBLANK( Date_Implemented__c ),  NOT(Investigation__r.isLegacyInvestigation__c) )</formula>
        <label>Feedback Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvestigationId__c</fullName>
        <formula>Investigation__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InvestigationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <description>In case of non-compliant item associated to an investigation, this field must be filled.</description>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Non Compliant Item (additional to visit)</relationshipLabel>
        <relationshipName>Non_Compliant_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this non compliant item is associated to a high risk regulation</inlineHelpText>
        <label>Key Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Corrective_Action_EEC_Feedback__c</fullName>
        <inlineHelpText>Date of the last update of corrective action feedback</inlineHelpText>
        <label>Last Corrective Action EEC Feedback</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Observations__c</fullName>
        <inlineHelpText>Describe here the non-compliance</inlineHelpText>
        <label>Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Email_Address__c</fullName>
        <inlineHelpText>Email address of the provider used to send EEC Feedback if corrective plan is not correct.</inlineHelpText>
        <label>Provider Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Require_Portal_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, it means that the report was published on the web and the investigation has non-compliance items that needs to be filled by the provider</inlineHelpText>
        <label>Require Portal Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Review_on_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Provider needs to review the item on the portal.</inlineHelpText>
        <label>To Review on Portal</label>
        <type>Checkbox</type>
    </fields>
    <label>Non Compliant Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Investigation__c</columns>
        <columns>Observations__c</columns>
        <columns>Correction_Plan__c</columns>
        <columns>Feedback_Requested__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NC-{00000}</displayFormat>
        <label>Non Compliant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Compliant Item</pluralLabel>
    <recordTypes>
        <fullName>Investigation_Non_Compliant_Item</fullName>
        <active>true</active>
        <description>Non-compliant item discovered in the scope of an investigation and that does not relate to a visit</description>
        <label>Investigation Non Compliant Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_save_NC_Item_with_Observ_NULL</fullName>
        <active>true</active>
        <description>If the user tries to save a Non Compliant item that is non-compliant and &quot;Observations&quot; is empty, it will show an error message</description>
        <errorConditionFormula>ISBLANK( Observations__c )</errorConditionFormula>
        <errorDisplayField>Observations__c</errorDisplayField>
        <errorMessage>Observations must be provided for non-compliant item as it will be used in the Non-Compliant Statement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Corr_Action_EEC_Feedback_empty_if_no_Cor</fullName>
        <active>true</active>
        <description>&quot;Corrective Action EEC Feedback&quot; should stay empty if: Correction Plan is NULL or Corrective Actions Submitter is NULL
Attached story : LEAD-2733</description>
        <errorConditionFormula>AND(
NOT(ISBLANK( Corrective_Action_EEC_Feedback__c )) ,

ISBLANK( Corrective_Actions_Submitter__c )

)</errorConditionFormula>
        <errorDisplayField>Corrective_Action_EEC_Feedback__c</errorDisplayField>
        <errorMessage>Corrective Action EEC Feedback should be empty if no correction plan has been yet submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Correction_Plan_NULL_Date_Impl_NOT_Null</fullName>
        <active>true</active>
        <description>If Correction Plan is not empty then Date Implemented should not be empty</description>
        <errorConditionFormula>NOT( ISBLANK( Correction_Plan__c ) ) &amp;&amp; ISBLANK( Date_Implemented__c ) &amp;&amp;  NOT( Investigation__r.isLegacyInvestigation__c )</errorConditionFormula>
        <errorDisplayField>Date_Implemented__c</errorDisplayField>
        <errorMessage>If Correction Plan is provided then Date Implemented is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Creation_Updates_on_Closed_Investigation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Investigation__r.Investigation_Status__c,&apos;Closed&apos;),$UserRole.Name !=&apos;Executive_and_Directors&apos;, $UserRole.Name!=&apos;Regional_Director&apos;,OR(NOT(OR(CONTAINS($UserRole.DeveloperName,&apos;Director&apos;),CONTAINS($UserRole.DeveloperName,&apos;Supervisor&apos;))),AND($UserRole.DeveloperName==&apos;FCC_Supervisor&apos;, Investigation__r.Provider_No__r.RecordType.Name != &apos;Family Child Care&apos;), AND($UserRole.DeveloperName==&apos;SLGSA_Supervisor&apos;,AND(Investigation__r.Provider_No__r.RecordType.Name != &apos;Large Group&apos;, Investigation__r.Provider_No__r.RecordType.Name != &apos;Small Group&apos;)) ,AND($UserRole.DeveloperName==&apos;R_P_Supervisor&apos;, Investigation__r.Provider_No__r.RecordType.Name != &apos;Group Care&apos;,Investigation__r.Provider_No__r.RecordType.Name != &apos;Temporary Shelter&apos;,Investigation__r.Provider_No__r.RecordType.Name != &apos;Adoption Agency&apos;,Investigation__r.Provider_No__r.RecordType.Name != &apos;Foster Care Agency&apos;)))</errorConditionFormula>
        <errorMessage>Non Compliant Items can&apos;t be created or updated on &apos;Closed&apos; Investigation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Impl_NULL_Cor_Plan_NOT_NULL</fullName>
        <active>true</active>
        <description>If Date Implemented is not empty then Correction Planshould not be empty</description>
        <errorConditionFormula>NOT( ISBLANK( Date_Implemented__c ) ) &amp;&amp; ISBLANK( Correction_Plan__c )</errorConditionFormula>
        <errorDisplayField>Correction_Plan__c</errorDisplayField>
        <errorMessage>If Date Implemented is provided then Correction Plan is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_on_legacy_investigation_not_allow</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Investigation__r.isLegacyInvestigation__c == true,
  OR( ISCHANGED( Correction_Plan__c ),
    ISCHANGED( Correction_Plan_Status__c ),
    ISCHANGED(  Corrective_Action_EEC_Feedback__c  ),
    ISCHANGED(  Corrective_Actions_Submitter__c ),
    ISCHANGED(  Date_Correction_Plan_Accepted__c ),
    ISCHANGED(  Date_Corrective_Actions_Received__c ),
    ISCHANGED(  Date_Implemented__c ),
    ISCHANGED(  Feedback_Requested__c ),
    ISCHANGED(  Key_Indicator__c ),
    ISCHANGED(  Observations__c ),
    ISCHANGED(  Last_Corrective_Action_EEC_Feedback__c ),
    ISCHANGED(  Require_Portal_Feedback__c ),
    ISCHANGED(  To_Review_on_Portal__c )
  )
)</errorConditionFormula>
        <errorMessage>Updates not allowed on legacy data.</errorMessage>
    </validationRules>
</CustomObject>